--- a/joy_20121011_client/res/layout/darenview.xml
+++ b/joy_20121011_client/res/layout/darenview.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/RelativeLayout03"
+<LinearLayout android:id="@+id/RelativeLayout03"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:gravity="center" android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <ImageView android:id="@+id/darenview_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/pic_bg"
+        android:src="@drawable/daren"
         >
     </ImageView>
    <TextView 
        	android:id="@+id/darenview_text"
-        android:layout_below="@id/darenview_image"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
         android:text="123"
         >
     </TextView>
 
     <Button
+        android:layout_marginTop="15dp"
         android:id="@+id/darenview_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/darenview_text"
-        android:layout_centerHorizontal="true"
         android:text="@string/jiaguanzhu" 
         android:background="@drawable/btn_guanzhu"
         android:textColor="@color/white"/>
 
-</RelativeLayout>
+</LinearLayout>
