--- a/joy_20121011_client/res/layout/grid_item.xml
+++ b/joy_20121011_client/res/layout/grid_item.xml
@@ -6,8 +6,11 @@
          android:layout_weight = "1"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <Button android:id="@+id/button_item"
+        
+        android:background="@drawable/btn_juji"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         >
     </Button>
 </LinearLayout>
