--- a/joy_20121011_client/res/layout/detailact.xml
+++ b/joy_20121011_client/res/layout/detailact.xml
@@ -219,6 +219,7 @@
 	        android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:background="@drawable/dou_left"
+		    android:layout_marginLeft="5dp"
 	        >
 	        <TextView 
 	            android:layout_centerInParent="true"
@@ -244,6 +245,7 @@
 		    android:layout_height="wrap_content"
 		    android:background="@drawable/btn_jianjie"
 		    android:layout_alignParentRight="true"
+		    android:layout_marginRight="5dp"
 	        >
 	        <TextView 
 	            android:layout_centerInParent="true"
