--- a/joy_20121011_client/res/values/color.xml
+++ b/joy_20121011_client/res/values/color.xml
@@ -6,4 +6,6 @@
     <color name="grey">#999999</color>
     <color name="blue">#2763AB</color>
     <color name="transparent">#00000000</color>
+    <color name="fengexian">#131313</color>
+    <color name="neirong">#A5A5A5</color>
 </resources>
