--- a/joy_20121011_client/res/layout/activity04.xml
+++ b/joy_20121011_client/res/layout/activity04.xml
@@ -75,50 +75,57 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_alignParentRight="true"
+    android:layout_marginRight="10dp"
     >
 <LinearLayout 
     android:id="@+id/act04_guanzhu"
-    android:layout_width="80dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
 <TextView
-     android:layout_width="wrap_content" 
-     android:layout_height="wrap_content"
+     android:layout_width="40dp" 
+     android:layout_height="20dp"
      android:text="9969"
-     android:textColor="@color/black"
-     android:layout_gravity="center_horizontal|center_vertical"
-     android:background="@color/grey"
+     android:padding="1px"
+     android:gravity="center"
+     android:textColor="@color/white"
+     android:background="@drawable/topleft1"
     />
-<Button
-     android:layout_width="wrap_content" 
-     android:layout_height="wrap_content"
+<TextView
+     android:layout_width="30dp" 
+     android:layout_height="20dp"
+     android:padding="1px"
+     android:gravity="center"
      android:text="@string/guanzhu"
      android:textColor="@color/white"
-     android:background="@color/black"
+     android:background="@drawable/topbarright"
     />
 </LinearLayout>
 <LinearLayout 
     android:id="@+id/act04_fensi"
-    android:layout_width="80dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_marginLeft="10dp"
     >
 <TextView
-     android:layout_width="wrap_content" 
-     android:layout_height="wrap_content"
+     android:layout_width="40dp" 
+     android:layout_height="20dp"
      android:text="1275"
-     android:textColor="@color/black"
-     android:layout_gravity="center_horizontal|center_vertical"
-     android:background="@color/grey"
-    />
-<Button
-     android:layout_width="wrap_content" 
-     android:layout_height="wrap_content"
-     android:text="@string/fensi"
+     android:padding="1px"
+     android:gravity="center"
      android:textColor="@color/white"
-     android:background="@color/black"
-     android:clickable="false"
+     android:background="@drawable/topleft1"
+    />
+<TextView
+     android:layout_width="30dp" 
+     android:layout_height="20dp"
+     android:text="@string/fensi"
+     android:padding="1px"
+     android:gravity="center"
+     android:textColor="@color/white"
+     android:background="@drawable/topbarright"
     />
 </LinearLayout>
 </LinearLayout>   
