--- a/joy_20121011_client/res/layout/sigle_recomment.xml
+++ b/joy_20121011_client/res/layout/sigle_recomment.xml
@@ -12,7 +12,7 @@
         >
         <ImageView
             android:id="@+id/user_image"
-            android:src="@drawable/ic_launcher" 
+            android:src="@drawable/head" 
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
             />
@@ -72,6 +72,6 @@
         android:layout_width="fill_parent"
 	    android:layout_height="1dp"
 	    android:text=""
-	    android:background="@color/white"
+	    android:background="@color/fengexian"
     />
  </RelativeLayout>
