--- a/joy_20121011_client/res/layout/sinawebview.xml
+++ b/joy_20121011_client/res/layout/sinawebview.xml
@@ -2,6 +2,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/white"
     >
     <WebView
     android:id="@+id/sinawebview"
