--- a/joy_20121011_client/res/layout/tongxunlunlist.xml
+++ b/joy_20121011_client/res/layout/tongxunlunlist.xml
@@ -47,7 +47,7 @@
     android:background="#4A4A4A"
     android:gravity="center_vertical"
     >
-<EditText
+<AutoCompleteTextView
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:hint="@string/dianhuahaoma"
