--- a/joy_20121011_client/res/values/style.xml
+++ b/joy_20121011_client/res/values/style.xml
@@ -18,7 +18,7 @@
  */
 -->
 <resources>
-	<style name="ContentOverlay" parent="android:style/Theme.Dialog">
+	<style name="ContentOverlay" parent="@android:style/Theme.NoTitleBar.Fullscreen">
 		<item name="android:windowNoTitle">true</item>
 		<item name="android:windowIsTranslucent">true</item>
 		<item name="android:windowBackground">@color/transparent</item>
