--- a/joy_20121011_client/res/layout/activity04.xml
+++ b/joy_20121011_client/res/layout/activity04.xml
@@ -47,8 +47,8 @@
     android:fadingEdge="none"
     android:scrollbars="none">
 <RelativeLayout 
+    android:layout_height="wrap_content"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     android:orientation="vertical"
     >
 
