--- a/yueshipin/res/layout/item_download_detail.xml
+++ b/yueshipin/res/layout/item_download_detail.xml
@@ -76,11 +76,12 @@
     <TextView
         android:id="@+id/downloadfilename"
         android:layout_width="76dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:ellipsize="end"
         android:gravity="center"
-        android:singleLine="true"
+        android:maxEms="12"
+        android:maxLines="2"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/black"
