--- a/yueshipin/res/layout/videoview.xml
+++ b/yueshipin/res/layout/videoview.xml
@@ -51,12 +51,12 @@
         </FrameLayout>
     </FrameLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
+    <ImageView
+        android:id="@+id/imageView_BG"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        />
+        android:src="@drawable/player_preload" />
 
 </RelativeLayout>
